# splitter-mckorsky

./: .gitignore  CMakeLists.txt  splitter.cpp  splitter.h
